# pineapple-comic-reader

./: .gitignore  CMakeLists.txt  ComicOverviewPage.qml  ComicSelectionPage.qml  ComicViewer.qml  ConnectServerPage.qml  LibrarySelectionPage.qml  Main.qml  README.md  appcontroller.cpp  appcontroller.h  main.cpp
dataitems/: comicitem.cpp  comicitem.h  folderitem.cpp  folderitem.h  libraryitem.cpp  libraryitem.h
